// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon List block saved block HTML shouldn't change 1`] = `
<ul
  className="wp-block-ugb-icon-list ugb-icon-list ugb-icon--icon-cross ugb-icon--columns-0 className"
  style={
    Object {
      "--gap": "8px",
      "--icon": "url('data:image/svg+xml;base64,PGRpdj48L2Rpdj4=')",
      "--icon-size": "10px",
    }
  }
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<li>text</li>",
      }
    }
  />
</ul>
`;

exports[`Icon List block saved default block HTML shouldn't change 1`] = `
<ul
  className="wp-block-ugb-icon-list ugb-icon-list ugb-icon--icon-check ugb-icon--columns-1"
  style={
    Object {
      "--gap": "16px",
      "--icon": "url('data:image/svg+xml;base64,PGRpdj48L2Rpdj4=')",
      "--icon-size": "20px",
    }
  }
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</ul>
`;
